# diffusion-probabilistic-models-JAX

./: LICENSE  README.md  diffusion.py  porting_notes.md  pyproject.toml  sohl.py
configs/training/: cifar.yaml  mnist.yaml  spiral.yaml
models/: spiral.epx
scripts/: inferenceee.py  inferencing.py  training.py
src/inference/: __init__.py  inference.py
src/sohl2015/: image.py  spiral.py
src/utils/: __init__.py  utils.py
